--- a/latte-core/src/main/AndroidManifest.xml
+++ b/latte-core/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.ascend.wangfeng.latte">
-
+<uses-permission android:name="android.permission.INTERNET"/>
     <application android:allowBackup="true"
                  android:label="@string/app_name"
                  android:supportsRtl="true"
