--- a/example/build.gradle
+++ b/example/build.gradle
@@ -22,6 +22,10 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile project(':latte-ec')
+    testCompile 'junit:junit:4.12'
+    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+        exclude group: 'com.android.support', module: 'support-annotations'
+    })
     annotationProcessor project(':latte-compiler')
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
 }
