--- a/example/src/main/AndroidManifest.xml
+++ b/example/src/main/AndroidManifest.xml
@@ -16,6 +16,18 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity
+            android:theme="@style/Theme.AppCompat.Translucent"
+            android:name=".wxapi.WXEntryActivity"
+            android:exported="true"
+            android:label="weChat"
+            android:launchMode="singleTop"
+            android:screenOrientation="portrait">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW"/>
+
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
