--- a/latte-core/build.gradle
+++ b/latte-core/build.gradle
@@ -62,4 +62,6 @@ dependencies {
     compile 'org.greenrobot:greendao-generator:3.2.0'
     compile 'com.facebook.stetho:stetho:1.5.0'
     compile 'com.facebook.stetho:stetho-okhttp:1.5.0'
+    //weChat
+    compile 'com.tencent.mm.opensdk:wechat-sdk-android-with-mta:+'
 }
