--- a/latte-core/build.gradle
+++ b/latte-core/build.gradle
@@ -51,6 +51,7 @@ dependencies {
     compile 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
     //Banner
     compile 'com.bigkoo:convenientbanner:2.0.5'
+    compile 'com.ToxicBakery.viewpager.transforms:view-pager-transforms:1.2.32@aar'
     //JSON
     compile 'com.alibaba:fastjson:1.1.62.android'
     compile 'com.android.support:design:26.0.0-alpha1'
@@ -64,4 +65,20 @@ dependencies {
     compile 'com.facebook.stetho:stetho-okhttp:1.5.0'
     //weChat
     compile 'com.tencent.mm.opensdk:wechat-sdk-android-with-mta:+'
+    //recyclerview
+    compile 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.16'
+    //Recyclerview 分割线
+    compile 'com.choices.divider:RecyclerView_Divider:1.0.0'
+    compile 'com.yqritc:recyclerview-flexibledivider:1.4.0'
+    //图片处理
+    compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'com.github.bumptech.glide:okhttp3-integration:1.4.0@aar'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.0.0'
+    //沉浸式状态栏
+    compile('com.github.niorgai:StatusBarCompat:2.1.4', {
+        exclude group: 'com.android.support'
+    })
+    //GoogleAutoValue (ps: provided 关键字 编译时使用,打包时废弃)
+    provided 'com.google.auto.value:auto-value:1.5'
+    annotationProcessor 'com.google.auto.value:auto-value:1.5'
 }
