--- a/example/src/main/AndroidManifest.xml
+++ b/example/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <application
         android:name=".ExampleApp"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ic_libai"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
