--- a/latte-core/build.gradle
+++ b/latte-core/build.gradle
@@ -34,8 +34,8 @@ dependencies {
     compile 'com.joanzapata.iconify:android-iconify-ionicons:2.2.2'
     compile 'com.joanzapata.iconify:android-iconify-fontawesome:2.2.2'
     /*frangment库*/
-    compile 'me.yokeyword:fragmentation:0.10.1'
-    compile 'me.yokeyword:fragmentation-swipeback:0.7.9'
+    compile 'me.yokeyword:fragmentation:1.1.3'
+    compile 'me.yokeyword:fragmentation-swipeback:1.1.3'
     /*butterknife*/
     compile 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
@@ -74,6 +74,8 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.github.bumptech.glide:okhttp3-integration:1.4.0@aar'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.0.0'
+    //circle image
+    compile 'de.hdodenhof:circleimageview:2.1.0'
     //沉浸式状态栏
     compile('com.github.niorgai:StatusBarCompat:2.1.4', {
         exclude group: 'com.android.support'
