--- a/latte-core/build.gradle
+++ b/latte-core/build.gradle
@@ -2,12 +2,12 @@ apply plugin: 'com.android.library'
 apply plugin: 'com.jakewharton.butterknife'
 apply plugin: 'org.greenrobot.greendao'
 android {
-    compileSdkVersion 26
-    buildToolsVersion "26"
+    compileSdkVersion 25
+    buildToolsVersion "25.0.3"
 
     defaultConfig {
         minSdkVersion 19
-        targetSdkVersion 26
+        targetSdkVersion 25
         versionCode 1
         versionName "1.0"
 
@@ -27,7 +27,10 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:26.0.0-alpha1'
+    compile 'com.android.support:appcompat-v7:25.3.1'
+    compile 'com.android.support:design:25.3.1'
+    compile 'com.android.support:support-v4:25.3.1'
+    compile 'com.android.support:cardview-v7:25.3.1'
     testCompile 'junit:junit:4.12'
     compile project(':latte-annotations')
     /*字体图标*/
@@ -54,8 +57,6 @@ dependencies {
     compile 'com.ToxicBakery.viewpager.transforms:view-pager-transforms:1.2.32@aar'
     //JSON
     compile 'com.alibaba:fastjson:1.1.62.android'
-    compile 'com.android.support:design:26.0.0-alpha1'
-    compile 'com.android.support:support-v4:26.0.0-alpha1'
     //logger
     compile 'com.orhanobut:logger:2.1.1'
     //数据库
@@ -76,6 +77,8 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.0.0'
     //circle image
     compile 'de.hdodenhof:circleimageview:2.1.0'
+    //Image cropping
+    compile 'com.github.yalantis:ucrop:2.2.1-native'
     //沉浸式状态栏
     compile('com.github.niorgai:StatusBarCompat:2.1.4', {
         exclude group: 'com.android.support'
@@ -83,4 +86,10 @@ dependencies {
     //GoogleAutoValue (ps: provided 关键字 编译时使用,打包时废弃)
     provided 'com.google.auto.value:auto-value:1.5'
     annotationProcessor 'com.google.auto.value:auto-value:1.5'
+    //permission
+    compile 'com.github.hotchemi:permissionsdispatcher:2.4.0'
+    annotationProcessor 'com.github.hotchemi:permissionsdispatcher-processor:2.4.0'
+    //工具库
+    compile 'com.blankj:utilcode:1.8.6'
+
 }
