二维码 ,搜索功能

--- a/latte-core/build.gradle
+++ b/latte-core/build.gradle
@@ -95,6 +95,8 @@ dependencies {
     annotationProcessor 'com.github.hotchemi:permissionsdispatcher-processor:2.4.0'
     //工具库
     compile 'com.blankj:utilcode:1.8.6'
+    //二维码扫描
+    compile 'me.dm7.barcodescanner:zbar:1.9.8'
 
 
 }
