--- a/latte-ui/build.gradle
+++ b/latte-ui/build.gradle
@@ -24,4 +24,9 @@ android {
 
 dependencies {
     compile project(':latte-core')
+    //View动画依赖
+
+    compile 'com.nineoldandroids:library:2.4.0'
+    compile 'com.daimajia.easing:library:1.0.1@aar'
+    compile 'com.daimajia.androidanimations:library:1.1.3@aar'
 }
