4g采集设备基本图表

--- a/locationby4g/src/main/AndroidManifest.xml
+++ b/locationby4g/src/main/AndroidManifest.xml
@@ -34,6 +34,7 @@
             </intent-filter>
         </activity>
         <service android:name=".services.SocketService"></service>
+        <service android:name=".services.SocketService2"></service>
     </application>
 
 </manifest>
