最新数据页面 布局修改, circleImageview 更改

--- a/latte-core/build.gradle
+++ b/latte-core/build.gradle
@@ -37,7 +37,7 @@ dependencies {
 
     /*字体图标*/
     compile 'com.joanzapata.iconify:android-iconify-ionicons:2.2.2'
-    compile 'com.joanzapata.iconify:android-iconify-fontawesome:2.2.2'
+    compile 'com.joanzapata.iconify:android-iconify-fontawesome:+'
 
     /*frangment库*/
     compile 'me.yokeyword:fragmentation:1.1.3'
