--- a/wifimanage/src/main/AndroidManifest.xml
+++ b/wifimanage/src/main/AndroidManifest.xml
@@ -2,16 +2,39 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.ascend.wangfeng.wifimanage">
 
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    //获取设备网络状态，禁用后无法获取网络状态
+    <uses-permission android:name="android.permission.INTERNET"/>
+    //网络权限，当禁用后，无法进行检索等相关业务
+    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
+    //读取设备硬件信息，统计数据
+    <uses-permission android:name="com.android.launcher.permission.READ_SETTINGS"/>
+    //读取系统信息，包含系统版本等信息，用作统计
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
+    //获取设备的网络状态，鉴权所需网络代理
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    //允许sd卡写权限，需写入地图数据，禁用后无法显示地图
+    <uses-permission android:name="android.permission.WRITE_SETTINGS"/>
+    //获取统计数据
+    <uses-permission android:name="android.permission.GET_TASKS"/>
+    //鉴权所需该权限获取进程列表
+
+
     <application
-        android:hardwareAccelerated="false"
-        android:allowBackup="true"
         android:name=".MainApp"
+        android:allowBackup="true"
+        android:hardwareAccelerated="false"
         android:icon="@mipmap/ic_launcher1"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher1"
-
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity"
+
+        <meta-data
+            android:name="com.baidu.lbsapi.API_KEY"
+            android:value="OWAV0YgyyHddQRhcvgHlwrCxyUlCnuyL"/>
+
+        <activity
+            android:name=".MainActivity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
