--- a/latte-core/build.gradle
+++ b/latte-core/build.gradle
@@ -19,6 +19,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
@@ -106,9 +110,6 @@ dependencies {
     provided 'com.google.auto.value:auto-value:1.5'
     annotationProcessor 'com.google.auto.value:auto-value:1.5'
 
-    //permission
-    compile 'com.github.hotchemi:permissionsdispatcher:2.4.0'
-    annotationProcessor 'com.github.hotchemi:permissionsdispatcher-processor:2.4.0'
 
     //工具库
     compile 'com.blankj:utilcode:1.8.6'
