--- a/wifimanage/build.gradle
+++ b/wifimanage/build.gradle
@@ -14,7 +14,9 @@ android {
         versionName "1.0"
         multiDexEnabled true
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-
+        jackOptions {
+            enabled true //使用lambda表达式
+        }
     }
 
     buildTypes {
@@ -23,26 +25,24 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-    sourceSets{
-        main{
+    sourceSets {
+        main {
             jniLibs.srcDir 'libs'
             //说明so的路径为该libs路径，关联所有地图SDK的so文件
         }
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
-greendao{
+greendao {
     schemaVersion 1;
     daoPackage 'com.ascend.wangfeng.wifimanage.greendao'
     targetGenDir 'src/main/java'
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.android.support.constraint:constraint-layout:1.1.0'
-    testCompile 'junit:junit:4.12'
-    androidTestCompile('com.android.support.test.espresso:espresso-core:3.0.1', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
     /*64k异常*/
     compile 'com.android.support:multidex:1.0.1'
@@ -53,8 +53,6 @@ dependencies {
     // 日历控件
     compile 'com.haibin:calendarview:3.3.0'
     compile files('libs/BaiduLBS_Android.jar')
-    compile('com.yanzhenjie:permission:2.0.0-rc5') {
-        exclude module: "support-v13"
-    }
-    compile 'com.android.support:support-fragment:27.1.1'
+    compile 'com.yanzhenjie:permission:2.0.0-rc5'
+    compile 'com.android.support:support-fragment:27+'
 }
