--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':example', ':latte-compiler', ':latte-annotations', ':latte-core', ':latte-ec', ':latte-ui', ':wifimap', ':locationby4g', ':wifimanage'
+include  ':latte-compiler', ':latte-annotations', ':latte-core',  ':wifimanage'
