--- a/wifimanage/src/main/res/raw/unknown_devices.json
+++ b/wifimanage/src/main/res/raw/unknown_devices.json
@@ -1,34 +1,34 @@
 {
   "message": "成功",
-  "code": 200,
+  "statusCode": 200,
   "data": [
     {
-      "name": "iPhone7p",
-      "type": 1,
-      "mac": "41:53:1a:56:72:92",
-      "ip": "192.168.168.13",
-      "brand": "Apple"
+      "dname": "iPhone7p",
+      "dtype": 1,
+      "dmac": "41:53:1a:56:72:92",
+      "devIp": "192.168.168.13",
+      "hostname": "Apple"
     },
     {
-      "name": "iPadair2",
-      "type": 2,
-      "mac": "41:53:1a:56:72:93",
-      "ip": "192.168.168.131",
-      "brand": "Apple"
+      "dname": "iPadair2",
+      "dtype": 2,
+      "dmac": "41:53:1a:56:72:93",
+      "devIp": "192.168.168.131",
+      "hostname": "Apple"
     },
     {
-      "name": "Printer",
-      "type": 2,
-      "mac": "41:53:1a:56:72:94",
-      "ip": "192.168.168.139",
-      "brand": "HP"
+      "dname": "Printer",
+      "dtype": 2,
+      "dmac": "41:53:1a:56:72:94",
+      "devIp": "192.168.168.139",
+      "hostname": "HP"
     },
     {
-      "name": "",
-      "type": 1,
-      "mac": "41:53:1a:56:72:95",
-      "ip": "192.168.168.138",
-      "brand": "Lenovo"
+      "dname": "",
+      "dtype": 1,
+      "dmac": "41:53:1a:56:72:95",
+      "devIp": "192.168.168.138",
+      "hostname": "Lenovo"
     }
   ]
 }
