--- a/wifimanage/build.gradle
+++ b/wifimanage/build.gradle
@@ -37,6 +37,10 @@ android {
 }
 
 dependencies {
+    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+        exclude group: 'com.android.support', module: 'support-annotations'
+    })
+    testCompile 'junit:junit:4.12'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
     /*64k异常*/
     compile 'com.android.support:multidex:1.0.1'
