组件化功能新增: 模块单独调试

--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,10 @@ allprojects {
 
     }
 }
-
+ext{
+    //模块是否能单独运行
+    isModuleRun = true
+}
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
