--- a/example/build.gradle
+++ b/example/build.gradle
@@ -43,9 +43,11 @@ android {
 dependencies {
     api fileTree(include: ['*.jar'], dir: 'libs')
     api project(':latte-ec')
-    api project(':photo')
+    if (!isModuleRun.toBoolean()){
+        api project(':photo')
+    }
     annotationProcessor project(':latte-compiler')
-    implementation "me.leolin:ShortcutBadger:1.1.22@aar"
+    implementation 'me.leolin:ShortcutBadger:1.1.22@aar'
     //极光推送
     api 'cn.jiguang.sdk:jpush:3.0.3'
     api 'cn.jiguang.sdk:jcore:1.1.1'
