nestedScrollView,recyclerView,Viewpager冲突处理

--- a/latte-ec/build.gradle
+++ b/latte-ec/build.gradle
@@ -27,5 +27,6 @@ android {
 
 dependencies {
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+    implementation 'com.scwang.smartrefresh:SmartRefreshLayout:1.1.0-alpha-20'
     api project(':latte-ui')
 }
