--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include  ':example', ':latte-compiler', ':latte-annotations', ':latte-core', ':photo',':latte-ui','latte-ec'
+include  ':example', ':latte-compiler', ':latte-annotations', ':latte-core', ':photo',':latte-ui', ':webview','latte-ec'
